<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <TextView
        android:id="@+id/text_mainActivity_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:text="@string/app_name"
        android:textSize="@dimen/font_size_title_medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <Button
        android:id="@+id/button_mainActivity_appbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/appbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/button_mainActivity_imageLoader"
        />

    <Button
        android:id="@+id/button_mainActivity_imageLoader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/image_loader"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_mainActivity_appbar"
        app:layout_constraintBottom_toTopOf="@id/button_mainActivity_recyclerView"
        />

    <Button
        android:id="@+id/button_mainActivity_recyclerView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recyclerview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_mainActivity_imageLoader"
        app:layout_constraintBottom_toBottomOf="parent"
        />



</androidx.constraintlayout.widget.ConstraintLayout>